data/derived/fa15/progs/unify/prog2114.ml.out
Characters 66-70:
  let funt = fun b -> if f b then (1, 1) else (true, 1) in
                                               ^^^^
Error: This expression has type bool but an expression was expected of type
         int
